--- a/.github/workflows/release-base-ubuntu.yml
+++ b/.github/workflows/release-base-ubuntu.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Pre-build dev container image
         uses: devcontainers/ci@v0.3
         with:
-          imageName: ghcr.io/meastp/images/base-ubuntu:lunar
+          imageName: ghcr.io/meastp/images/base-ubuntu
           push: always
