--- a/.github/workflows/release-base-ubuntu.yml
+++ b/.github/workflows/release-base-ubuntu.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   deploy:
     if: ${{ github.ref == 'refs/heads/main' }}
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
