--- a/src/base-ubuntu/.devcontainer/Dockerfile
+++ b/src/base-ubuntu/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 # [Choice] Ubuntu version (use jammy on local arm64/Apple Silicon): jammy, focal
-ARG VARIANT="jammy"
+ARG VARIANT="lunar"
 FROM buildpack-deps:${VARIANT}-curl
 
 LABEL dev.containers.features="common"
