--- a/src/base-ubuntu/.devcontainer/devcontainer.json
+++ b/src/base-ubuntu/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
     "features": {
         "ghcr.io/devcontainers/features/common-utils:2": {
             "installZsh": "true",
-            "username": "vscode",
+            "username": "ubuntu",
             "userUid": "1000",
             "userGid": "1000",
             "upgradePackages": "true"
@@ -18,10 +18,8 @@
     },
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
-
     // Use 'postCreateCommand' to run commands after the container is created.
     // "postCreateCommand": "uname -a",
-
     // Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "vscode"
+    "remoteUser": "ubuntu"
 }
