--- a/src/cpp/.devcontainer/Dockerfile
+++ b/src/cpp/.devcontainer/Dockerfile
@@ -1,6 +1,4 @@
-# [Choice] Debian / Ubuntu version (use Debian 12, Debian 11, Ubuntu 22.04 on local arm64/Apple Silicon): debian-12, debian-11, debian-10, ubuntu-22.04, ubuntu-20.04
-ARG VARIANT=debian-12
-FROM mcr.microsoft.com/devcontainers/base:${VARIANT}
+FROM ghcr.io/meastp/base-ubuntu:latest
 USER root
 
 # Install needed packages. Use a separate RUN statement to add your own dependencies.
