--- a/.github/workflows/release-images.yml
+++ b/.github/workflows/release-images.yml
@@ -22,3 +22,9 @@ jobs:
         with:
           imageName: ghcr.io/meastp/images/base-ubuntu
           push: always
+      
+      - name: Pre-build dev container image
+        uses: devcontainers/ci@v0.3
+        with:
+          imageName: ghcr.io/meastp/images/cpp
+          push: always
