--- a/src/cpp/.devcontainer/Dockerfile
+++ b/src/cpp/.devcontainer/Dockerfile
@@ -11,7 +11,7 @@ ENV VCPKG_ROOT=/usr/local/vcpkg \
     VCPKG_DOWNLOADS=/usr/local/vcpkg-downloads
 ENV PATH="${PATH}:${VCPKG_ROOT}"
 
-ARG USERNAME=vscode
+ARG USERNAME=ubuntu
 
 # Install vcpkg itself: https://github.com/microsoft/vcpkg/blob/master/README.md#quick-start-unix
 COPY base-scripts/install-vcpkg.sh /tmp/
