--- a/src/cpp/.devcontainer/Dockerfile
+++ b/src/cpp/.devcontainer/Dockerfile
@@ -13,7 +13,7 @@ ENV PATH="${PATH}:${VCPKG_ROOT}"
 
 RUN cat /etc/passwd
 
-ARG USERNAME=vscode
+ARG USERNAME=ubuntu
 
 # Install vcpkg itself: https://github.com/microsoft/vcpkg/blob/master/README.md#quick-start-unix
 COPY base-scripts/install-vcpkg.sh /tmp/
