--- a/src/cpp/.devcontainer/devcontainer.json
+++ b/src/cpp/.devcontainer/devcontainer.json
@@ -3,12 +3,7 @@
 		"dockerfile": "./Dockerfile",
 		"context": "."
 	},
-	"features": {
-		"ghcr.io/devcontainers/features/git:1": {
-			"version": "latest",
-			"ppa": "false"
-		}
-	},
+	"features": {},
 	"capAdd": [
 		"SYS_PTRACE"
 	],
@@ -31,5 +26,5 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "gcc -v",
 	// Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	"remoteUser": "ubuntu"
 }
