--- a/.github/workflows/release-images.yml
+++ b/.github/workflows/release-images.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2 
-        with:
+        uses: docker/login-action@v3
+        with: 
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Smoke test for 'base-ubuntu'
