--- a/src/cpp/.devcontainer/Dockerfile
+++ b/src/cpp/.devcontainer/Dockerfile
@@ -6,7 +6,26 @@ RUN cat /etc/passwd
 
 # Install needed packages. Use a separate RUN statement to add your own dependencies.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install build-essential cmake cppcheck valgrind clang lldb llvm gdb \
+    && apt-get -y install --no-install-recommends git gcc-13 g++-13 cmake automake make ninja-build ccache rsync gdb linux-tools-generic pkg-config zip unzip tar dotnet-host-7.0 dotnet-sdk-7.0 gpg pass inotify-tools sudo \
+    && echo ubuntu ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/ubuntu \
+    && chmod 0440 /etc/sudoers.d/ubuntu \
+    && update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 20 \
+    && update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-13 20 \
+    && update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30 \
+    && update-alternatives --set cc /usr/bin/gcc \
+    && update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30 \
+    && update-alternatives --set c++ /usr/bin/g++ \
+    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+
+# Installer Microsoft ODBC
+# Konfigurere sertifikat/pakker: https://learn.microsoft.com/en-us/linux/packages
+# https://learn.microsoft.com/en-us/sql/connect/odbc/linux-mac/installing-the-microsoft-odbc-driver-for-sql-server?view=sql-server-ver16
+
+RUN curl -sSL -O  https://packages.microsoft.com/config/ubuntu/23.04/packages-microsoft-prod.deb \
+    && dpkg -i packages-microsoft-prod.deb \
+    && rm packages-microsoft-prod.deb \
+    && apt-get update \
+    && ACCEPT_EULA=Y apt-get -y install --no-install-recommends msodbcsql18 unixodbc-dev \
     && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 # Setup ENV vars for vcpkg
