--- a/src/base-ubuntu/.devcontainer/devcontainer.json
+++ b/src/base-ubuntu/.devcontainer/devcontainer.json
@@ -4,13 +4,13 @@
         "context": "."
     },
     "features": {
-        "ghcr.io/devcontainers/features/common-utils:2": {
-            "installZsh": "false",
-            "installOhMyZsh": "false",
-            "installOhMyZshConfig": "false",
-            "username": "ubuntu",
-            "upgradePackages": "true"
-        },
+        //"ghcr.io/devcontainers/features/common-utils:2": {
+        //    "installZsh": "false",
+        //    "installOhMyZsh": "false",
+        //    "installOhMyZshConfig": "false",
+        //    "username": "ubuntu",
+        //    "upgradePackages": "true"
+        // },
         "ghcr.io/devcontainers/features/git:1": {
             "version": "latest",
             "ppa": "false"
