--- a/src/base-ubuntu/.devcontainer/devcontainer.json
+++ b/src/base-ubuntu/.devcontainer/devcontainer.json
@@ -11,15 +11,15 @@
         //    "username": "ubuntu",
         //    "upgradePackages": "true"
         // },
-        "ghcr.io/devcontainers/features/git:1": {
-            "version": "latest",
-            "ppa": "false"
-        }
+        //"ghcr.io/devcontainers/features/git:1": {
+        //    "version": "latest",
+        //    "ppa": "false"
+        //}
     },
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
     // Use 'postCreateCommand' to run commands after the container is created.
     // "postCreateCommand": "uname -a",
     // Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "ubuntu"
+    // "remoteUser": "ubuntu"
 }
