--- a/src/base-ubuntu/.devcontainer/Dockerfile
+++ b/src/base-ubuntu/.devcontainer/Dockerfile
@@ -26,3 +26,7 @@ RUN curl -sSL -O  https://packages.microsoft.com/config/ubuntu/23.04/packages-mi
   && rm packages-microsoft-prod.deb \
   && apt-get update \
   && ACCEPT_EULA=Y apt-get -y install --no-install-recommends msodbcsql18 unixodbc-dev
+
+COPY ./dockerindocker.sh /home/ubuntu/dockerindocker.sh
+RUN chmod +x /home/ubuntu/dockerindocker.sh 
+RUN DOCKERDASHCOMPOSEVERSION=v2 USERNAME=ubuntu MOBY=false /home/ubuntu/dockerindocker.sh 
