--- a/src/base-ubuntu/.devcontainer/Dockerfile
+++ b/src/base-ubuntu/.devcontainer/Dockerfile
@@ -1,5 +1,6 @@
 # [Choice] Ubuntu version (use jammy on local arm64/Apple Silicon): jammy, focal
 ARG VARIANT="lunar"
+ARG PERF_VER="5.15"
 FROM buildpack-deps:${VARIANT}-curl
 
 #LABEL dev.containers.features="common"
@@ -8,7 +9,9 @@ FROM buildpack-deps:${VARIANT}-curl
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
   && apt-get -y install --no-install-recommends git gcc-13 g++-13 mold cmake automake make ninja-build ccache rsync gdb pkg-config zip unzip tar dotnet-host-7.0 dotnet-sdk-7.0 gpg pass inotify-tools sudo\
   # avhengigheter for heaptrack
-  libdw-dev libunwind-dev zlib1g zlib1g-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev libboost-filesystem-dev libboost-container-dev\ 
+  libdw-dev libunwind-dev zlib1g zlib1g-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev libboost-filesystem-dev libboost-container-dev\
+  # avhengigheter for perf
+  flex bison libssl-dev libelf-dev python3 wget xz-utils\
   && echo ubuntu ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/ubuntu \
   && chmod 0440 /etc/sudoers.d/ubuntu
 
@@ -23,6 +26,17 @@ COPY ./dockerindocker.sh /home/ubuntu/dockerindocker.sh
 RUN chmod +x /home/ubuntu/dockerindocker.sh 
 RUN DOCKERDASHCOMPOSEVERSION=v2 USERNAME=ubuntu MOBY=false /home/ubuntu/dockerindocker.sh 
 
+
 WORKDIR /home/ubuntu
-# Installer heaptrack
+# Bygg perf
+RUN wget https://mirrors.edge.kernel.org/pub/linux/kernel/tools/perf/v5.15.0/perf-${PERF_VER}.0.tar.xz
+  && tar xf perf-${PERF_VER}.0.tar.xz
+  && cd perf-${PERF_VER}.0
+# Måtte fjerne -Werror en del Makefiles før bygging fordi vi bygger med nyere GCC som har fått flere warnings-as-errors.
+  && find . -type f | xargs sed -i 's/-Werror//g'
+# Når bygging er ferdig skal perf være klar i ./tools/perf/perf
+  && make -C tools/perf install
+
+WORKDIR /home/ubuntu
+# Bygg heaptrack
 RUN git clone https://github.com/KDE/heaptrack.git && cd heaptrack && mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && make -j$(nproc)
