--- a/src/base-ubuntu/.devcontainer/Dockerfile
+++ b/src/base-ubuntu/.devcontainer/Dockerfile
@@ -31,8 +31,8 @@ WORKDIR /home/ubuntu
 ARG PERF_VER="5.15"
 RUN wget https://mirrors.edge.kernel.org/pub/linux/kernel/tools/perf/v5.15.0/perf-$PERF_VER.0.tar.xz\
   && tar xf perf-$PERF_VER.0.tar.xz\
-  && mv perf-$PERF_VER.0 perf_build
-  && cd perf_build
+  && mv perf-$PERF_VER.0 perf_build\
+  && cd perf_build\
 # Måtte fjerne -Werror en del Makefiles før bygging fordi vi bygger med nyere GCC som har fått flere warnings-as-errors.
   && find . -type f | xargs sed -i 's/-Werror//g'\
 # Når bygging er ferdig skal perf være klar i ./tools/perf/perf
