--- a/src/base-ubuntu/.devcontainer/Dockerfile
+++ b/src/base-ubuntu/.devcontainer/Dockerfile
@@ -35,9 +35,10 @@ RUN wget https://mirrors.edge.kernel.org/pub/linux/kernel/tools/perf/v5.15.0/per
   && cd perf_build\
 # Måtte fjerne -Werror en del Makefiles før bygging fordi vi bygger med nyere GCC som har fått flere warnings-as-errors.
   && find . -type f | xargs sed -i 's/-Werror//g'\
-# Når bygging er ferdig skal perf være klar i ./tools/perf/perf
+# Når bygging er ferdig skal perf være klar i /home/ubuntu/per_build/tools/perf/perf
   && make -C tools/perf install
 
 WORKDIR /home/ubuntu
 # Bygg heaptrack
 RUN git clone https://github.com/KDE/heaptrack.git && cd heaptrack && mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && make -j$(nproc)
+# Når bygging er ferdig skal perf være klar i /home/ubuntu/heaptrack/build/bin/heaptrack
