--- a/src/base-ubuntu/.devcontainer/Dockerfile
+++ b/src/base-ubuntu/.devcontainer/Dockerfile
@@ -41,7 +41,7 @@ RUN wget https://mirrors.edge.kernel.org/pub/linux/kernel/tools/perf/v5.15.0/per
 # Lurt å bygge statisk binærfil for å kunne kopiere rundt uten ekstra avhengigheter
   && sed -i 's/# Define LDFLAGS=-static to build a static binary./LDFLAGS=-static/g' tools/perf/Makefile.perf\ 
 # Når bygging er ferdig skal perf være klar i /home/ubuntu/per_build/tools/perf/perf
-  && make -C tools/perf install
+  && export LIBDW_DIR=/usr/include/elfutils && make -C tools/perf install
 
 WORKDIR /home/ubuntu
 # Bygg heaptrack
