--- a/src/base-ubuntu/.devcontainer/Dockerfile
+++ b/src/base-ubuntu/.devcontainer/Dockerfile
@@ -18,6 +18,8 @@ RUN  apt-get update && export DEBIAN_FRONTEND=noninteractive && apt-get -y upgra
   # avhengigheter for perf
   patch flex bison libssl-dev elfutils libaudit-dev libelf-dev libcap-dev wget xz-utils libzstd-dev binutils-dev libiberty-dev libslang2-dev libcap-dev systemtap-sdt-dev python3 python3-dev python3-distutils-extra\ 
   libc6-dbg libgcc-s1-dbgsym libstdc++6-dbgsym\
+  # gcovr coverage
+  pipx
   && echo ubuntu ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/ubuntu \
   && chmod 0440 /etc/sudoers.d/ubuntu
 
@@ -54,3 +56,6 @@ WORKDIR /home/ubuntu
 # Bygg heaptrack
 RUN git clone https://github.com/KDE/heaptrack.git && cd heaptrack && mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && make -j$(nproc)
 # Når bygging er ferdig skal perf være klar i /home/ubuntu/heaptrack/build/bin/heaptrack
+
+RUN pipx ensurepath\ 
+ && pipx install gcovr
